src/test/ui/error-codes/E0559.stderr
error[E0559]: variant `Field::Fool` has no field named `joke`
  --> $DIR/E0559.rs:6:27
   |
LL |     let s = Field::Fool { joke: 0 };
   |                           ^^^^ `Field::Fool` does not have this field
   |
   = note: available fields are: `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0559`.
